crates/mineral-tui/src/components/layout/shared/snapshots/top_status_audio_null_badge_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/shared/top_status.rs
description: "顶栏:无音频设备降级徽标"
expression: t.backend()
---
"▌ mineral vX.Y.Z  │                                 ⚠ no audio device  ‖ paused "
