crates/mineral-tui/src/components/layout/shared/snapshots/top_status_library_queue_open_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/shared/top_status.rs
description: "顶栏:Library 标签 + 队列打开"
expression: t.backend()
---
"▌ mineral vX.Y.Z  │                                                    ‖ paused "
