crates/mineral-tui/src/components/layout/shared/snapshots/top_status_playlists_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/shared/top_status.rs
description: "顶栏:Playlists 标签态"
expression: t.backend()
---
"▌ mineral vX.Y.Z  │                                                    ‖ paused "
