crates/mineral-tui/src/components/layout/shared/snapshots/transport_fmt_bit_hz_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/transport.rs
description: "播放栏:fmt 含位深+采样率(flac 24bit/96kHz)"
expression: t.backend()
---
"╭ transport ───────────────────────────────────────────────────╮"
"│                             捕风                             │" Hidden by multi-width symbols: [(31, " "), (33, " ")]
"│                               ·                              │"
"│ 1:00 ━━━━━━━━━━━━━●──────────────────────────────────── 3:45 │"
"│                     [⏮]   [⏸]   [⏭]   [→]                    │"
"│                      p     ␣     n     m                     │"
"│ vol ████████▊    80%      mode seq      ↓ flac 24bit/96kHz 99│"
"╰──────────────────────────────────────────────────────────────╯"
