crates/mineral-tui/src/components/layout/shared/snapshots/transport_no_track_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/shared/transport.rs
description: "播放栏:无曲目空态"
expression: t.backend()
---
"╭ transport ─────────────────────────────────────╮"
"│                        —                       │"
"│                        ·                       │"
"│ 0:00 ●─────────────────────────────────── -:-- │"
"│              [⏮]   [▶]   [⏭]   [→]             │"
"│               p     ␣     n     m              │"
"│ vol ██████ 100%    mode seq              fmt — │"
"╰────────────────────────────────────────────────╯"
