crates/mineral-tui/src/components/layout/shared/snapshots/transport_origin_remote_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/transport.rs
description: "播放栏:来源徽标 remote(○ 灰)"
expression: t.backend()
---
"╭ transport ───────────────────────────────────────────────────╮"
"│                             捕风                             │" Hidden by multi-width symbols: [(31, " "), (33, " ")]
"│                               ·                              │"
"│ 1:00 ━━━━━━━━━━━━━●──────────────────────────────────── 3:45 │"
"│                     [⏮]   [⏸]   [⏭]   [→]                    │"
"│                      p     ␣     n     m                     │"
"│ vol ████████▊    80%      mode seq             ○ mp3 320kbps │"
"╰──────────────────────────────────────────────────────────────╯"
