crates/mineral-tui/src/components/layout/shared/snapshots/transport_paused_long_title_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/transport.rs
description: "播放栏:暂停 + 长歌名(TheLastWordIsRejoice)"
expression: t.backend()
---
"╭ transport ─────────────────────────────────────╮"
"│              TheLastWordIsRejoice              │"
"│                        ·                       │"
"│ 0:30 ━━━●──────────────────────────────── 5:09 │"
"│              [⏮]   [▶]   [⏭]   [→]             │"
"│               p     ␣     n     m              │"
"│ vol ██████ 100%    mode seq              fmt — │"
"╰────────────────────────────────────────────────╯"
